[Add] kata 8 done